--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./Assets/Icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Audi</title>
 </head>
 
 <body>
@@ -127,7 +128,7 @@
                 <!-- Start of box with 1 offer (rest are duplicated structure)-->
                 <div class="examples">
 
-                    <img src="Assets/Product Images/product-card-audi-q3.png" class="cars" alt="">
+                    <img src="/Assets/ProductImages/product-card-audi-q3.png" class="cars" alt="">
 
                     <p class="seatDoor">5 Seats, 4 Doors</p>
                     <h3>Audi Q3 2020</h3>
@@ -149,7 +150,7 @@
 
                 <div class="examples">
 
-                    <img src="Assets/Product Images/product-card-audi-a4.png" class="cars" alt="">
+                    <img src="Assets/ProductImages/product-card-audi-a4.png" class="cars" alt="">
 
                     <p class="seatDoor">5 Seats, 4 Doors</p>
 
@@ -171,7 +172,7 @@
 
                 <div class="examples">
 
-                    <img src="Assets/Product Images/product-card-audi-a3.png" class="cars" alt="">
+                    <img src="Assets/ProductImages/product-card-audi-a3.png" class="cars" alt="">
 
                     <p class="seatDoor">5 Seats, 4 Doors</p>
                     <h3>Audi A3 2020</h3>
@@ -192,7 +193,7 @@
 
                 <div class="examples">
 
-                    <img src="Assets/Product Images/product-card-audi-q7.png" class="cars" alt="">
+                    <img src="Assets/ProductImages/product-card-audi-q7.png" class="cars" alt="">
 
                     <p class="seatDoor">5 Seats, 4 Doors</p>
                     <h3>Audi Q& 2020</h3>
@@ -225,7 +226,7 @@
                 <!-- Contact form -->
                 <div class="contact">
                     <form action="#" method="post">
-                        <input type="text" name="name" id="" placeholder="ENTER YOUR NAME" autocomplete="off"
+                        <input type="text" name="name" placeholder="ENTER YOUR NAME" autocomplete="off"
                             required><br>
                         <input type="email" name="email" placeholder="ENTER YOUR EMAIL" autocomplete="off" required><br>
                         <textarea name="message" placeholder="YOUR MESSAGE" required></textarea>
